--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js src/ --fix",
-    "start:dev": "nodemon bin/www.js --exec babel-node --presets es2015"
+    "start:dev": "nodemon ./src/bin/www.js --exec babel-node --presets es2015",
+    "build": "babel --presets es2015 src -d lib"
   },
   "dependencies": {
-    "@babel/node": "^7.0.0-rc.1",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
     "body-parser": "^1.18.3",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -20,6 +19,8 @@
     "nodemon": "^1.18.3"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "@babel/node": "^7.0.0-rc.1",
     "babel-eslint": "^8.2.3",
     "babel-loader": "^7.1.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
