--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-  "name": "proxy",
+  "name": "services",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js src/ --fix",
     "start:dev": "nodemon ./src/bin/www.js --exec babel-node --presets es2015",
-    "build": "babel --presets es2015 src -d lib"
+    "build": "babel --presets es2015 src -d lib",
+    "heroku-postbuild": "build",
+    "start": "node ./lib/bin/www.js"
+  },
+  "engines": {
+    "node": "8.11.1"
   },
   "dependencies": {
     "axios": "^0.18.0",
